test/apps/errors/__sapper__/build/client/index.b6015bf6.js
import { S as SvelteComponent, i as init, s as safe_not_equal, e as element, d as text, f as space, h as claim_element, j as children, k as claim_text, l as detach, C as attr, m as insert, o as append, n as noop } from './chunk.e83f0b4f.js';

/* test/apps/errors/src/routes/index.svelte generated by Svelte v3.6.9 */

function create_fragment(ctx) {
	var h1, t0, t1, a0, t2, t3, a1, t4, t5, a2, t6;

	return {
		c() {
			h1 = element("h1");
			t0 = text("root");
			t1 = space();
			a0 = element("a");
			t2 = text("nope");
			t3 = space();
			a1 = element("a");
			t4 = text("blog/nope");
			t5 = space();
			a2 = element("a");
			t6 = text("throw");
			this.h();
		},

		l(nodes) {
			h1 = claim_element(nodes, "H1", {}, false);
			var h1_nodes = children(h1);

			t0 = claim_text(h1_nodes, "root");
			h1_nodes.forEach(detach);
			t1 = claim_text(nodes, "\n\n");

			a0 = claim_element(nodes, "A", { href: true }, false);
			var a0_nodes = children(a0);

			t2 = claim_text(a0_nodes, "nope");
			a0_nodes.forEach(detach);
			t3 = claim_text(nodes, "\n");

			a1 = claim_element(nodes, "A", { href: true }, false);
			var a1_nodes = children(a1);

			t4 = claim_text(a1_nodes, "blog/nope");
			a1_nodes.forEach(detach);
			t5 = claim_text(nodes, "\n");

			a2 = claim_element(nodes, "A", { href: true }, false);
			var a2_nodes = children(a2);

			t6 = claim_text(a2_nodes, "throw");
			a2_nodes.forEach(detach);
			this.h();
		},

		h() {
			attr(a0, "href", "nope");
			attr(a1, "href", "blog/nope");
			attr(a2, "href", "throw");
		},

		m(target, anchor) {
			insert(target, h1, anchor);
			append(h1, t0);
			insert(target, t1, anchor);
			insert(target, a0, anchor);
			append(a0, t2);
			insert(target, t3, anchor);
			insert(target, a1, anchor);
			append(a1, t4);
			insert(target, t5, anchor);
			insert(target, a2, anchor);
			append(a2, t6);
		},

		p: noop,
		i: noop,
		o: noop,

		d(detaching) {
			if (detaching) {
				detach(h1);
				detach(t1);
				detach(a0);
				detach(t3);
				detach(a1);
				detach(t5);
				detach(a2);
			}
		}
	};
}

class Index extends SvelteComponent {
	constructor(options) {
		super();
		init(this, options, null, create_fragment, safe_not_equal, []);
	}
}

export default Index;
